--- a/style.css
+++ b/style.css
@@ -394,7 +394,7 @@
   }
 
     .checkbox p {
-        padding: 0 0.5em;
+        padding: 0 0.5rem;
     }
 
     .header_of_fourth_section {
@@ -1044,7 +1044,7 @@
         }
 
         .checkbox .common-font {
-            font-size: 1em;
+            font-size: 4rem;
         }
 
         .content_of_third_section .form_button {
@@ -1095,18 +1095,24 @@
             width: 80rem;
         }
 
+        .desc1 ul li {
+            line-height: 6rem;
+            color: #13131341;
+        }
+
         .desc1 .header-text {
             font-size: 1.5em;
         }
 
         .desc1 {
-            width: 65rem;
-            height: 60rem;
+            max-width: none;
+            width: 67rem;
+            height: 61rem;
             display: flex;
             position: relative;
             flex-direction: column;
             background-color: #fff;
-            padding: 3rem 10rem;
+            padding: 4rem 7rem;
             top: -36rem;
             left: 0;
             justify-content: flex-start;
@@ -1206,6 +1212,11 @@
             padding: 5rem;
         }
 
+        .checkbox img {
+            height: auto;
+            width: 3rem;
+        }
+
         .cnt_of_form h3 {
             text-align: center;
             font-size: 65.50px;
@@ -1217,9 +1228,7 @@
             width: 80rem;
         }
 
-        .mobile input {
-            font-size: 1rem;
-        }
+
 
 
         .mobile .gold-button {
